--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"ng serve\" \"node api/book.js\" \"node api/user.js\"",
+    "start": "concurrently \"ng serve\" \"node Rest_API/book-api.js\" \"node Rest_API/user-api.js\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
