--- a/vercel.json
+++ b/vercel.json
@@ -1,46 +1,41 @@
 {
     "version": 2,
     "rewrites": [
-      {
-        "source": "/books/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/searched/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/comments/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/register/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/login/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/getUserProfile/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/validate-token/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/change/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/change/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "getUserId/(.*)",
-        "destination": "/index.html"
-      }
-
+        {
+            "source": "/books/(.*)",
+            "destination": "/api"
+        },
+        {
+            "source": "/searched/(.*)",
+            "destination": "/api"
+        },
+        {
+            "source": "/comments/(.*)",
+            "destination": "/api"
+        },
+        {
+            "source": "/register",
+            "destination": "/api"
+        },
+        {
+            "source": "/login",
+            "destination": "/api"
+        },
+        {
+            "source": "/getUserProfile/(.*)",
+            "destination": "/api"
+        },
+        {
+            "source": "/validate-token/(.*)",
+            "destination": "/api"
+        },
+        {
+            "source": "/change/(.*)",
+            "destination": "/api"
+        },
+        {
+            "source": "getUserId/(.*)",
+            "destination": "/index.html"
+        }
     ]
-  }
+}
