--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
         },
         {
             "source": "/comments/(.*)",
-            "destination": "/api/comments/$1"
+            "destination": "/api"
         },
         {
             "source": "/register",
